--- a/Ficha-jogador.html
+++ b/Ficha-jogador.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ficha do Jogador</title>
     <link rel="stylesheet" href="/Assets/css/ficha jogador.css">
 </head>
+
 <body>
     <aside class="menu">
         <div class="logo">
@@ -19,5 +21,103 @@
             </ul>
         </nav>
     </aside>
+    <aside class="menuFichajogador">
+        <nav class="botoesFichajogador">
+            <ul>
+                <li><a href="#telaInforbasica">INFORMAÇÕES BASICAS</a></li>
+                <li><a href="#">V.I.D.A.</a></li>
+                <li><a href="#">ATRIBUTOS</a></li>
+                <li><a href="#">ATAQUES</a></li>
+                <li><a href="#">MAGIAS</a></li>
+                <li><a href="#">INVENTÁRIO</a></li>
+                <li><a href="#">CARACTERISTICAS</a></li>
+                <li><a href="#">ANOTAÇÕES</a></li>
+            </ul>
+        </nav>
+    </aside>
+    <div class="telaInforbasica" id="telaInforbasica">
+        <h1 class="tituloInfo">Informações Básicas</h1>
+        <div>
+            <form action="" class="form">
+                <div class="form1 formPad">
+                    <input type="text">
+                    <p>Nome Do Persongem</p>
+                </div>
+                <div class="form2 formPad">
+                    <input type="text">
+                    <p>Classe</p>
+                </div>
+                <div class="form3 formPad">
+                    <input type="text">
+                    <p>Raça</p>
+                </div>
+                <div class="form4 formPad">
+                    <input type="number">
+                    <p>Nível</p>
+                </div>
+                <div class="form5 formPad">
+                    <input type="text">
+                    <p>Nome do Jogador</p>
+                </div>
+                <div class="form6 formPad">
+                    <input type="text">
+                    <p>Alinhamento</p>
+                </div>
+                <div class="form7 formPad">
+                    <input type="text">
+                    <p>Antecedente</p>
+                </div>
+                <div class="form8 formPad">
+                    <input type="number">
+                    <p>XP</p>
+                </div>
+            </form>
+        </div>
+        <div class="atribMod">
+            <div class="atribFor">
+                <div>
+                    <input type="number">
+                </div>
+                <p>(FOR)</p>
+            </div>
+            <div class="atribDes">
+                <div>
+                    <input type="number">
+                </div>
+                <p>(DES)</p>
+            </div>
+            <div class="atribCons">
+                <div>
+                    <input type="number">
+                </div>
+                <p>(CONS)</p>
+            </div>
+            <div class="atribInt">
+                <div>
+                    <input type="number">
+                </div>
+                <p>(INT)</p>
+            </div>
+            <div class="atribSab">
+                <div>
+                    <input type="number">
+                </div>
+                <p>(SAB)</p>
+            </div>
+            <div class="atribCar">
+                <div>
+                    <input type="number">
+                </div>
+                <p>(CAR)</p>
+            </div>
+
+        </div>
+    </div>
+    <footer>
+        <div>
+            <span>desenvolvido por: Lucas Vieira</span>
+        </div>
+    </footer>
 </body>
+
 </html>
