--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -17,7 +17,7 @@
         <nav class="botoes">
             <ul>
                 <li><a href="#">WIKI DE TUDO E TODOS</a></li>
-                <li><a href="#">FICHA DO JOGADOR</a></li>
+                <li><a href="/Ficha-jogador.html">FICHA DO JOGADOR</a></li>
                 <li><a href="#">LOGIN</a></li>
             </ul>
         </nav>
