--- a/Ficha-jogador.html
+++ b/Ficha-jogador.html
@@ -21,12 +21,12 @@
             </ul>
         </nav>
     </aside>
-    <aside class="menuFichajogador">
+    <aside class="menuFichajogador" id="menuFichajogador">
         <nav class="botoesFichajogador">
             <ul>
-                <li><a href="#telaInforbasica">INFORMAÇÕES BASICAS</a></li>
-                <li><a href="#telaVida">V.I.D.A.</a></li>
-                <li><a href="#">ATRIBUTOS</a></li>
+                <li><a class= "infobasicaBt" href="#menuFichajogador">INFORMAÇÕES BASICAS</a></li>
+                <li><a class="vidaBt" href="#menuFichajogador">V.I.D.A.</a></li>
+                <li><a href="#menuFichajogador">ATRIBUTOS</li>
                 <li><a href="#">ATAQUES</a></li>
                 <li><a href="#">MAGIAS</a></li>
                 <li><a href="#">INVENTÁRIO</a></li>
@@ -112,7 +112,7 @@
             </div>
         </div>
     </div>
-    <div class="telaVida" id="telaVida">
+    <div class="telaVida oculto" id="telaVida">
         <h1 class="tituloInfo">
             V.I.D.A.
         </h1>
@@ -207,6 +207,7 @@
             <span>desenvolvido por: Lucas Vieira</span>
         </div>
     </footer>
+    <script src="/Assets/js/fichaJogador.js"></script>
 </body>
 
 </html>
