--- a/Ficha-jogador.html
+++ b/Ficha-jogador.html
@@ -202,6 +202,11 @@
             </div>
         </div>
     </div>
+    <div class="telaAtributos">
+        <h1 class="tituloInfo">
+            Atributos
+        </h1>
+    </div>
     <footer>
         <div>
             <span>desenvolvido por: Lucas Vieira</span>
