--- a/Ficha-jogador.html
+++ b/Ficha-jogador.html
@@ -26,7 +26,7 @@
             <ul>
                 <li><a class= "infobasicaBt" href="#menuFichajogador">INFORMAÇÕES BASICAS</a></li>
                 <li><a class="vidaBt" href="#menuFichajogador">V.I.D.A.</a></li>
-                <li><a href="#menuFichajogador">ATRIBUTOS</li>
+                <li><a class="atribBt" href="#menuFichajogador">ATRIBUTOS</li>
                 <li><a href="#">ATAQUES</a></li>
                 <li><a href="#">MAGIAS</a></li>
                 <li><a href="#">INVENTÁRIO</a></li>
@@ -202,7 +202,7 @@
             </div>
         </div>
     </div>
-    <div class="telaAtributos">
+    <div class="telaAtributos oculto">
         <h1 class="tituloInfo">
             Atributos
         </h1>
